# cad-representation-selection

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.gitlab/issue_templates/: Default.md
api/: Dockerfile  main.py
config/: config.yaml  feature_to_model_input_pipeline.yaml  treeLSTM_training.yaml  treelstm_classifier_tuning_pipeline.yaml  treelstm_regressor_tuning_pipeline.yaml
notebooks/: check_unique_Gears_HeadlessScrews.ipynb  eval_regression_models.ipynb  evaluate_voxel.ipynb  lstm-result-analysis_2025-02-28.py  regression_analysis.ipynb  trivial_baseline.ipynb
reports/: 10_introduction.md  20_related_works.md  40_methodology.md
reports/LSTM-full-training_2025-02-28/: testset_outputs.csv
reports/PROCIR__CIRPe_2026__Tex_Template/: PROCIR _CIRPe 2026.aux  PROCIR _CIRPe 2026.fdb_latexmk  PROCIR _CIRPe 2026.fls  PROCIR _CIRPe 2026.tex  ecrc.sty
reports/paper/: elsarticle.cls  paper.aux  paper.fdb_latexmk  paper.fls  paper.tex  references.bib
reports/raw->primary/: class_sizes_after_filter_2025-01-20-17:06.json  class_sizes_before_filter_2025-01-20-17:06.json  detected_duplicates.csv  excluded_files_2025-01-20-17:06.csv
scripts/: train_invariants_and_vecsets.py
src/clearshape/: 000_raw_to_primary.py  constants.py  dataset.py  feature_to_model_input.py  feature_to_reporting.py  model_input_to_reporting_pipeline.py  models_to_model_output_pipeline.py  primary_to_feature.py  trainer.py  (+1 more)
test/: test_primary_to_feature.py
(+8831 files in other folders)
